--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,9 @@ cmake_minimum_required (VERSION 2.6)
 project (Malan)
 
 include_directories(malan)
-include_directories(malan/expressions)
+include_directories(malan/Expressions)
 
-add_executable(main ./malan/main.cpp ./malan/Expressions/Expression.cpp ./malan/Expressions/BinaryExpression.cpp ./malan/Expressions/LogicalExpression.cpp)
+add_executable(main ./malan/main.cpp 
+./malan/Expressions/Expression.cpp 
+./malan/Expressions/BinaryExpression.cpp 
+./malan/Expressions/LogicalExpression.cpp)
