Added function types

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,7 @@
 cmake_minimum_required (VERSION 3.12.1)
+
+set(CMAKE_CXX_FLAGS -std="c++17")
+
 project (Malan)
 
 add_subdirectory(src)
-add_subdirectory(test)
-add_test (NAME Test COMMAND test/Test)
