Added deeper nested debug printing

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,1 +1,7 @@
-add_executable(main main.cpp expr.cpp type.cpp decl.cpp name.cpp)
+add_executable(main 
+main.cpp 
+#printer.cpp 
+expr.cpp 
+type.cpp 
+decl.cpp 
+name.cpp)
