--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,4 +4,11 @@ set(CMAKE_CXX_FLAGS -std="c++17")
 
 project (Malan)
 
-add_subdirectory(src)
+add_executable(main 
+main.cpp 
+printer.cpp
+expr.cpp 
+type.cpp 
+decl.cpp 
+name.cpp
+stmt.cpp)
