Moved src to src folder

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,13 +5,13 @@ include(CTest)
 set(CMAKE_CXX_FLAGS -std="c++17")
 
 add_executable(main 
-main.cpp 
-printer.cpp
-expr.cpp 
-type.cpp 
-decl.cpp 
-name.cpp
-stmt.cpp)
+src/main.cpp 
+src/printer.cpp
+src/expr.cpp 
+src/type.cpp 
+src/decl.cpp 
+src/name.cpp
+src/stmt.cpp)
 
 find_package(Boost 1.55 REQUIRED COMPONENTS unit_test_framework)
 
@@ -21,12 +21,12 @@ add_definitions (-DBOOST_TEST_DYN_LINK)
 
 add_executable(expr_t
 tests/expr_t.cpp
-printer.cpp
-expr.cpp 
-type.cpp 
-decl.cpp 
-name.cpp
-stmt.cpp)
+src/printer.cpp
+src/expr.cpp 
+src/type.cpp 
+src/decl.cpp 
+src/name.cpp
+src/stmt.cpp)
 
 target_link_libraries (expr_t ${Boost_FILESYSTEM_LIBRARY} ${Boost_SYSTEM_LIBRARY} ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY})
 
