Add builder to compiler

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,7 +11,10 @@ src/expr.cpp
 src/type.cpp 
 src/decl.cpp 
 src/name.cpp
-src/stmt.cpp)
+src/stmt.cpp
+src/builder.cpp
+src/builder.expr.cpp
+)
 
 find_package(Boost 1.55 REQUIRED COMPONENTS unit_test_framework)
 
@@ -26,7 +29,10 @@ src/expr.cpp
 src/type.cpp 
 src/decl.cpp 
 src/name.cpp
-src/stmt.cpp)
+src/stmt.cpp
+src/builder.cpp
+src/builder.expr.cpp
+)
 
 target_link_libraries (expr_t ${Boost_FILESYSTEM_LIBRARY} ${Boost_SYSTEM_LIBRARY} ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY})
 
