Added Add_expr unit test for lexer

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,9 +5,7 @@ include(CTest)
 set(CMAKE_CXX_FLAGS -std="c++17")
 
 find_package(Boost 1.55 REQUIRED COMPONENTS unit_test_framework)
-
 include_directories (tests ${Boost_INCLUDE_DIRS})
-
 add_definitions (-DBOOST_TEST_DYN_LINK)
 
 add_library(libmalan
@@ -35,5 +33,8 @@ target_link_libraries(lex libmalan)
 
 add_executable(expr_t tests/expr_t.cpp)
 target_link_libraries (expr_t libmalan ${Boost_FILESYSTEM_LIBRARY} ${Boost_SYSTEM_LIBRARY} ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY})
-
 add_test (NAME Expressions COMMAND expr_t)
+
+add_executable(lex_t tests/lex_t.cpp)
+target_link_libraries (lex_t libmalan ${Boost_FILESYSTEM_LIBRARY} ${Boost_SYSTEM_LIBRARY} ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY})
+add_test (NAME Lexing COMMAND lex_t)
