Lexer is not working

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,6 +34,9 @@ target_link_libraries(main libmalan)
 add_executable(lex src/lex.cpp)
 target_link_libraries(lex libmalan)
 
+add_executable(parse src/parse.cpp)
+target_link_libraries(parse libmalan)
+
 add_executable(expr_t tests/expr_t.cpp)
 target_link_libraries (expr_t libmalan ${Boost_FILESYSTEM_LIBRARY} ${Boost_SYSTEM_LIBRARY} ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY})
 add_test (NAME Expressions COMMAND expr_t)
